Name:                   broken-acid-state-test
Version:                0.0.0
Author:                 Scott <scott.murphy@plowtech.net>
Maintainer:             Scott <scott.murphy@plowtech.net>
License:                BSD3
License-File:           LICENSE
-- Synopsis:               
-- Description:            
Cabal-Version:          >= 1.10
Build-Type:             Simple

Library
  Default-Language:     Haskell2010
  HS-Source-Dirs:       src
  GHC-Options:          -Wall
  Exposed-Modules:      Broken
  Other-Modules:        Broken.Internal
  Build-Depends:        base >= 4 && < 5 
                      , safecopy <= 0.8.3
                      , mtl
                      , acid-state >= 0.12.2.1 
                      , unix
                      , system-filepath
                      , system-fileio

Test-Suite spec
  Type:                 exitcode-stdio-1.0
  Default-Language:     Haskell2010
  Hs-Source-Dirs:       src
                      , test
  Ghc-Options:          -Wall
  Main-Is:              Spec.hs
  Build-Depends:        base
                      , hspec
                      , unix
                      , system-filepath
                      , system-fileio


Executable acidStress
   main-is:            Main.hs
   default-language:   Haskell2010
   ghc-options:        -threaded -O2 -rtsopts -Wall
   HS-Source-Dirs:     src
   build-depends:       base,
                        safecopy <= 0.8.3
                      , unix
                      , acid-state >= 0.12.2.1 
                      , safecopy <= 0.8.3
                      , mtl
                      , system-filepath
                      , system-fileio



Source-Repository head
  Type:                 git
--  Location:             
